--- a/app/src/main/res/layout/activity_face_detect.xml
+++ b/app/src/main/res/layout/activity_face_detect.xml
@@ -3,11 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <org.opencv.android.CameraGLSurfaceView
-        android:id="@+id/cv_camera"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+    <org.opencv.android.JavaCameraView
+        android:id="@+id/cameraView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
