--- a/app/src/main/res/layout/face_detect_surface_view.xml
+++ b/app/src/main/res/layout/face_detect_surface_view.xml
@@ -1,42 +1,20 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/camera_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+    <FrameLayout
+        android:id="@+id/camera_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#90000000" />
 
-        <RadioButton
-            android:id="@+id/btn_frontCamera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:padding="10dp"
-            android:paddingTop="10dp"
-            android:text="前置摄像头" />
+    <ImageView
+        android:id="@+id/camera_switch"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_margin="20dp"
+        android:src="@drawable/selector_rewardcamera" />
 
-        <RadioButton
-            android:id="@+id/btn_backCamera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_toRightOf="@id/btn_frontCamera"
-            android:padding="10dp"
-            android:paddingTop="10dp"
-            android:text="后置摄像头" />
-    </RadioGroup>
-
-    <com.opencv.detect.widget.MyCvCameraView
-        android:id="@+id/cv_camera_id"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
-
-</LinearLayout>
+</RelativeLayout>
